--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,9 +3,9 @@
     font-family: 'open-sans-initial';
     src: url('../fonts/OpenSans-regular.eot');
     src: url('../fonts/OpenSans-regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OpenSans-regular.woff') format('woff'),
-    url('../fonts/OpenSans-regular.ttf') format('truetype'),
-    url('../fonts/OpenSans-regular.svg#latohairline_italic') format('svg');
+        url('../fonts/OpenSans-regular.woff') format('woff'),
+        url('../fonts/OpenSans-regular.ttf') format('truetype'),
+        url('../fonts/OpenSans-regular.svg#latohairline_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -93,15 +93,15 @@ body * {
 ********************/
 h1 {
     font-size: 34px;
-	font-weight: 700;
+    font-weight: 700;
 }
 h2 {
     font-size: 30px;
-	font-weight: 700;
+    font-weight: 700;
 }
 h3 {
     font-size: 28px;
-	font-weight: 700;
+    font-weight: 700;
 }
 h4 {
     font-size: 24px;
@@ -220,7 +220,7 @@ em {
 .frIconLeft .formControl:focus + i {
     color: #DA8213;
 }
-.frIconLeft i {
+.frIconLeft>i {
     position: absolute;
     width: 36px;
     text-align: center;
@@ -396,6 +396,78 @@ li.ui-tabs-active a {
 }
 .homeSignInUp .ui-tabs-nav {
     padding: 9px 10px 0 10px;
+}
+/* input errors */
+.inputError {
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    top: 0;
+    top: 8px;
+    right: 8px;
+}
+.inputError i {
+    margin: 0;
+}
+.inputError span {
+    position: absolute;
+    top: -130%;
+    right: -2px;
+    white-space: nowrap;
+    padding: 2px 5px;
+    background: #DA8213;
+    color: #fff;
+}
+.inputError span:after {
+    content: '';
+    border: solid 10px transparent;
+    border-top-color: #DA8213;
+    position: absolute;
+    bottom: 10px;
+    bottom: -17px;
+    right: 0;
+}
+/* end input errors */
+.homeSearch {
+    position: relative;
+    margin-top: 30px;
+    max-width: 70%;
+}
+.homeSearch input[type="text"]{
+    border: none;
+    background-color: #fff;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.48);
+    width: 100%;
+    font-size: 20px;
+    line-height: 48px;
+    font-weight: normal;
+    padding: 0 40px 0 10px;
+    color: #504348;
+    display: block;
+}
+/*.homeSearch input[type="text"]::-webkit-input-placeholder {
+   color: #fff;
+}
+.homeSearch input[type="text"]:-moz-placeholder {
+   color: #fff;  
+}
+.homeSearch input[type="text"]::-moz-placeholder {
+   color: #fff;  
+}
+.homeSearch input[type="text"]:-ms-input-placeholder {  
+   color: #fff;  
+}*/
+.homeSearch button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: #DA8213;
+    width: 55px;
+}
+.homeSearch button i {
+    margin: 0;
+    font-size: 25px;
 }
 
 .remMeForgPass .checkbox {
@@ -602,9 +674,9 @@ header {
 .notifDrDn .dropDnSub {
     right: initial;
     left: 0;
-/*    float: left;
-    margin: 0;
-    line-height: 40px;*/
+    /*    float: left;
+        margin: 0;
+        line-height: 40px;*/
 }
 .notifDrDn .dropDnSub ul li {
     padding-left: 35px;
@@ -699,6 +771,7 @@ header {
 }
 .userImage {
     margin-bottom: 20px;
+    position: relative;
 }
 .userImage img {
     display: block;
@@ -735,6 +808,34 @@ header {
 .userProff {
     color: #AFAFAF;
     font-size: 16px;
+}
+.imgEditBtns {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.7);
+    text-align: center;
+    opacity: 0;
+    transition: opacity .7s;
+    -webkit-transition: opacity .7s;
+}
+.userImage:hover .imgEditBtns {
+    opacity: 1;
+    /*transform: scale(1,1);*/
+}
+.imgEditBtns button {
+    /*padding: 5px 15px;*/
+    color: #fff;
+    font-size: 30px;
+    text-transform: uppercase;
+    margin-top: 70px;
+}
+.imgEditBtns button i {
+    font-size: 50px;
+    margin: 0;
+    opacity: .95;
 }
 
 .cvTimeline:not(:last-child) {
@@ -999,6 +1100,9 @@ header {
 .cvSubCont ul li:hover .delCvItem {
     display: block;
 }
+.cvSubCont ul li .delCvItem.singleForm {
+    display: none!important;
+}
 /* end edit profile page */
 
 /* popup styles */
@@ -1043,34 +1147,34 @@ header {
     font-family: "project-39";
 }
 .popupAnim.mfp-bg {
-  opacity: 0;
-  -webkit-transition: all 0.15s ease-out;
-  -moz-transition: all 0.15s ease-out;
-  transition: all 0.15s ease-out;
+    opacity: 0;
+    -webkit-transition: all 0.15s ease-out;
+    -moz-transition: all 0.15s ease-out;
+    transition: all 0.15s ease-out;
 }
 .popupAnim.mfp-bg.mfp-ready {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 .popupAnim.mfp-bg.mfp-removing {
-  opacity: 0;
+    opacity: 0;
 }
 .popupAnim.mfp-wrap .mfp-content {
-  opacity: 0;
-  transform: translateY(-20px);
-  -webkit-transform: translateY(-20px);
-  -webkit-transition: all 0.15s ease-out;
-  -moz-transition: all 0.15s ease-out;
-  transition: all 0.15s ease-out;
+    opacity: 0;
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -webkit-transition: all 0.15s ease-out;
+    -moz-transition: all 0.15s ease-out;
+    transition: all 0.15s ease-out;
 }
 .popupAnim.mfp-wrap.mfp-ready .mfp-content {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
 }
 .popupAnim.mfp-wrap.mfp-removing .mfp-content {
-  opacity: 0;
-  -webkit-transform: translateY(-20px);
-  transform: translateY(-20px);
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
 }
 /* end popup styles */
 
@@ -1250,6 +1354,72 @@ footer h4 {
     display: inline-block;
     padding: 0 20px;
 }
+
+.udImg {
+    position: relative;
+}
+.udImg img {
+    opacity: 0;
+}
+.udImg span {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center; 
+}
+.userImage img {
+    opacity: 0;
+}
+.userImage span {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+
+.inputError {
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    top: 0;
+    top: 8px;
+    right: 8px;
+}
+.inputError i {
+    margin: 0;
+}
+.inputError span {
+    position: absolute;
+    top: -130%;
+    right: -2px;
+    white-space: nowrap;
+    padding: 2px 5px;
+    background: #DA8213;
+    color: #fff;
+}
+.inputError span:after {
+    content: '';
+    border: solid 10px transparent;
+    border-top-color: #DA8213;
+    position: absolute;
+    bottom: 10px;
+    bottom: -17px;
+    right: 0;
+}
+
+
+
 
 
 
