--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,9 +3,9 @@
     font-family: 'open-sans-initial';
     src: url('../fonts/OpenSans-regular.eot');
     src: url('../fonts/OpenSans-regular.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/OpenSans-regular.woff') format('woff'),
-        url('../fonts/OpenSans-regular.ttf') format('truetype'),
-        url('../fonts/OpenSans-regular.svg#latohairline_italic') format('svg');
+    url('../fonts/OpenSans-regular.woff') format('woff'),
+    url('../fonts/OpenSans-regular.ttf') format('truetype'),
+    url('../fonts/OpenSans-regular.svg#latohairline_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -93,15 +93,15 @@ body * {
 ********************/
 h1 {
     font-size: 34px;
-    font-weight: 700;
+	font-weight: 700;
 }
 h2 {
     font-size: 30px;
-    font-weight: 700;
+	font-weight: 700;
 }
 h3 {
     font-size: 28px;
-    font-weight: 700;
+	font-weight: 700;
 }
 h4 {
     font-size: 24px;
@@ -674,9 +674,9 @@ header {
 .notifDrDn .dropDnSub {
     right: initial;
     left: 0;
-    /*    float: left;
-        margin: 0;
-        line-height: 40px;*/
+/*    float: left;
+    margin: 0;
+    line-height: 40px;*/
 }
 .notifDrDn .dropDnSub ul li {
     padding-left: 35px;
@@ -1147,34 +1147,34 @@ header {
     font-family: "project-39";
 }
 .popupAnim.mfp-bg {
-    opacity: 0;
-    -webkit-transition: all 0.15s ease-out;
-    -moz-transition: all 0.15s ease-out;
-    transition: all 0.15s ease-out;
+  opacity: 0;
+  -webkit-transition: all 0.15s ease-out;
+  -moz-transition: all 0.15s ease-out;
+  transition: all 0.15s ease-out;
 }
 .popupAnim.mfp-bg.mfp-ready {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 .popupAnim.mfp-bg.mfp-removing {
-    opacity: 0;
+  opacity: 0;
 }
 .popupAnim.mfp-wrap .mfp-content {
-    opacity: 0;
-    transform: translateY(-20px);
-    -webkit-transform: translateY(-20px);
-    -webkit-transition: all 0.15s ease-out;
-    -moz-transition: all 0.15s ease-out;
-    transition: all 0.15s ease-out;
+  opacity: 0;
+  transform: translateY(-20px);
+  -webkit-transform: translateY(-20px);
+  -webkit-transition: all 0.15s ease-out;
+  -moz-transition: all 0.15s ease-out;
+  transition: all 0.15s ease-out;
 }
 .popupAnim.mfp-wrap.mfp-ready .mfp-content {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+  opacity: 1;
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
 }
 .popupAnim.mfp-wrap.mfp-removing .mfp-content {
-    opacity: 0;
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
+  opacity: 0;
+  -webkit-transform: translateY(-20px);
+  transform: translateY(-20px);
 }
 /* end popup styles */
 
@@ -1310,6 +1310,58 @@ header {
 /* end search page */
 
 
+.udImg {
+    position: relative;
+}
+.udImg img {
+    opacity: 0;
+}
+.udImg span {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center; 
+}
+.userImage img {
+    opacity: 0;
+}
+.userImage span {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+}
+.homeTopUser .homeTopText {
+    margin: 0 auto;
+    float: none;
+    width: 50%;
+    text-align: center;
+}
+.cd-words-wrapper {
+    width: auto!important;
+}
+.homeTopUser .homeSearch {
+    margin: 0 auto;
+}
+/*.homeTopUser header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}*/
+
+
+
 /* footer */
 footer {
     padding: 40px 0;
@@ -1355,68 +1407,7 @@ footer h4 {
     padding: 0 20px;
 }
 
-.udImg {
-    position: relative;
-}
-.udImg img {
-    opacity: 0;
-}
-.udImg span {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-size: cover;
-    background-position: center; 
-}
-.userImage img {
-    opacity: 0;
-}
-.userImage span {
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-}
 
-
-.inputError {
-    position: absolute;
-    right: 0;
-    z-index: 1;
-    top: 0;
-    top: 8px;
-    right: 8px;
-}
-.inputError i {
-    margin: 0;
-}
-.inputError span {
-    position: absolute;
-    top: -130%;
-    right: -2px;
-    white-space: nowrap;
-    padding: 2px 5px;
-    background: #DA8213;
-    color: #fff;
-}
-.inputError span:after {
-    content: '';
-    border: solid 10px transparent;
-    border-top-color: #DA8213;
-    position: absolute;
-    bottom: 10px;
-    bottom: -17px;
-    right: 0;
-}
 
 
 
