--- a/web/css/main.css
+++ b/web/css/main.css
@@ -558,8 +558,14 @@ header {
     padding: 10px 0;
     background: #303030;
 } 
+.headerLogo img {
+    max-width: 100%;
+    max-height: 40px;
+    display: block;
+}
 .headerLogo {
     float: left;
+    max-width: 140px;
 }
 .headerRight {
     float: right;
