--- a/web/css/main.css
+++ b/web/css/main.css
@@ -349,7 +349,7 @@ em {
 }
 .homeTop {
     /*height: 450px;*/
-    background: url('../images/home-img.jpg') center;
+    background: url('../img/home-img.jpg') center;
     background-size: cover;
     padding: 60px 0;
 }
@@ -730,8 +730,9 @@ header {
     margin: 0;
     font-size: 12px;
     vertical-align: top;
+    line-height: normal;
 }
-.hdrNotifR button {
+.hdrNotifR>* {
     height: 20px;
     width: 20px;
     /*background-color: #252525;*/
@@ -740,7 +741,7 @@ header {
     margin-top: 5px;
     padding: 2px;
 }
-.hdrNotifR button:hover {
+.hdrNotifR>*:hover {
     opacity: .7;
 }
 .hdrNotifC {
@@ -1004,7 +1005,7 @@ header {
     /*border-top: solid 1px #E0E0E0;*/
 }
 .plActions .btn {
-    padding: 4px 17px;
+    padding: 4px 10px;
 }
 .plDets p {
     margin-bottom: 2px;
@@ -1480,6 +1481,16 @@ header {
 .pagin ul li {
     float: left;
     margin-left: 7px;
+}
+.pagin ul li.prev span,
+.pagin ul li.next span {
+        display: block;
+        padding: 2px 8px;
+        border: solid 2px #CACACA;
+}
+.pagin ul li:not(.disabled):hover span {
+    border-color: #DA8213;
+    color: #DA8213;
 }
 .pagin ul li a {
     display: block;
