--- a/web/css/main.css
+++ b/web/css/main.css
@@ -844,6 +844,7 @@ header {
     margin-bottom: 7px;
     padding-bottom: 7px;
     border-bottom: solid 1px #E0E0E0;
+    min-height: 29px;
 }
 .listWithIcons i {
     position: absolute;
@@ -1013,13 +1014,11 @@ header {
     opacity: 0;
 }
 .peopleListL>span {
-    width: 140px;
-    height: 140px;
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    left: 5px;
+    top: 5px;
+    bottom: 5px;
+    right: 5px;
     background-position: center;
     background-size: cover;
     display: block;
