--- a/web/css/main.css
+++ b/web/css/main.css
@@ -699,13 +699,13 @@ header {
 .notifDrDn .dropDnSub {
     right: initial;
     left: 0;
-    min-width: 220px;
+    min-width: 250px;
 /*    float: left;
     margin: 0;
     line-height: 40px;*/
 }
 .notifDrDn .dropDnSub ul li {
-    padding-left: 35px;
+    padding-left: 45px;
     padding-right: 50px;
     position: relative;
     min-height: 35px;
@@ -716,8 +716,8 @@ header {
     position: relative;
 }
 .hdrNotifL {
-    width: 30px;
-    height: 30px;
+    width: 38px;
+    height: 38px;
     position: absolute;
     left: 0;
 }
@@ -736,6 +736,7 @@ header {
     right: 0;
     bottom: 0;
     position: absolute;
+    z-index: 99;
 }
 .hdrNotifR .notifActions {
     position: absolute;
@@ -754,16 +755,25 @@ header {
     /*background-color: #252525;*/
     margin-left: 3px;
     float: left;
-    margin-top: 5px;
+    margin-top: 9px;
     padding: 2px;
 }
 .hdrNotifR>*:hover {
     opacity: .7;
 }
 .hdrNotifC {
-    line-height: 30px;
+    /*line-height: 30px;*/
+    /*white-space: nowrap;*/
+    max-width: 160px;
+    text-overflow: ellipsis;
+    overflow: hidden;
     white-space: nowrap;
-    max-width: 125px;
+}
+.hdrNotifC span:first-of-type {
+    color: #ADADAD;
+}
+.hdrNotifC span {
+    display: block;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
