--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,9 +3,9 @@
     font-family: 'open-sans-initial';
     src: url('../fonts/OpenSans-regular.eot');
     src: url('../fonts/OpenSans-regular.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/OpenSans-regular.woff') format('woff'),
-    url('../fonts/OpenSans-regular.ttf') format('truetype'),
-    url('../fonts/OpenSans-regular.svg#latohairline_italic') format('svg');
+        url('../fonts/OpenSans-regular.woff') format('woff'),
+        url('../fonts/OpenSans-regular.ttf') format('truetype'),
+        url('../fonts/OpenSans-regular.svg#latohairline_italic') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -93,15 +93,15 @@ body * {
 ********************/
 h1 {
     font-size: 34px;
-	font-weight: 700;
+    font-weight: 700;
 }
 h2 {
     font-size: 30px;
-	font-weight: 700;
+    font-weight: 700;
 }
 h3 {
     font-size: 28px;
-	font-weight: 700;
+    font-weight: 700;
 }
 h4 {
     font-size: 24px;
@@ -338,6 +338,7 @@ em {
 .container {
     width: 1100px;
     margin: 0 auto;
+    position: relative;
 }
 .mainContainer {
     padding: 60px 0;
@@ -349,9 +350,12 @@ em {
 }
 .homeTop {
     /*height: 450px;*/
-    background: url('../images/home-img.jpg') center;
-    background-size: cover;
+
+    /*        background: url('../images/home-img.jpg') center;
+            background-size: cover;*/
     padding: 60px 0;
+    position: relative;
+    z-index: 0;
 }
 .homeTopText {
     margin: 0;
@@ -700,9 +704,9 @@ header {
     right: initial;
     left: 0;
     min-width: 250px;
-/*    float: left;
-    margin: 0;
-    line-height: 40px;*/
+    /*    float: left;
+        margin: 0;
+        line-height: 40px;*/
 }
 .notifDrDn .dropDnSub ul li {
     padding-left: 45px;
@@ -1252,34 +1256,34 @@ header {
     font-family: "project-39";
 }
 .popupAnim.mfp-bg {
-  opacity: 0;
-  -webkit-transition: all 0.15s ease-out;
-  -moz-transition: all 0.15s ease-out;
-  transition: all 0.15s ease-out;
+    opacity: 0;
+    -webkit-transition: all 0.15s ease-out;
+    -moz-transition: all 0.15s ease-out;
+    transition: all 0.15s ease-out;
 }
 .popupAnim.mfp-bg.mfp-ready {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 .popupAnim.mfp-bg.mfp-removing {
-  opacity: 0;
+    opacity: 0;
 }
 .popupAnim.mfp-wrap .mfp-content {
-  opacity: 0;
-  transform: translateY(-20px);
-  -webkit-transform: translateY(-20px);
-  -webkit-transition: all 0.15s ease-out;
-  -moz-transition: all 0.15s ease-out;
-  transition: all 0.15s ease-out;
+    opacity: 0;
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -webkit-transition: all 0.15s ease-out;
+    -moz-transition: all 0.15s ease-out;
+    transition: all 0.15s ease-out;
 }
 .popupAnim.mfp-wrap.mfp-ready .mfp-content {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
 }
 .popupAnim.mfp-wrap.mfp-removing .mfp-content {
-  opacity: 0;
-  -webkit-transform: translateY(-20px);
-  transform: translateY(-20px);
+    opacity: 0;
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
 }
 /* end popup styles */
 
@@ -1511,8 +1515,8 @@ header {
     -webkit-transition: margin-top 1s, opacity 1s;*/
 }
 .topNotif.showNotif {
-   /* margin-top: 0;
-    opacity: 1;*/
+    /* margin-top: 0;
+     opacity: 1;*/
 }
 
 .topNotif p i {
@@ -1572,9 +1576,9 @@ header {
 }
 .pagin ul li.prev span,
 .pagin ul li.next span {
-        display: block;
-        padding: 2px 8px;
-        border: solid 2px #CACACA;
+    display: block;
+    padding: 2px 8px;
+    border: solid 2px #CACACA;
 }
 .pagin ul li:not(.disabled):hover span {
     border-color: #DA8213;
@@ -1638,9 +1642,9 @@ header {
     box-shadow: inset 0 0 0 1px #DA8213;
 }
 .poweredBy {
-  /*  border-top: solid 1px #737373;
-    margin-top: 40px;
-    padding-top: 30px;*/
+    /*  border-top: solid 1px #737373;
+      margin-top: 40px;
+      padding-top: 30px;*/
     text-align: center;
 }
 .addMWrapper {
@@ -1849,3 +1853,63 @@ footer h4 {
     padding-left: 30px;
 }
 /* end text from editor */
+
+/*flexslider*/
+.flexslider{
+    background: transparent none;
+    border:0 none;
+    -webkit-box-shadow: 0 0 0 transparent;
+    -moz-box-shadow: 0 0 0 transparent;
+    -o-box-shadow: 0 0 0 transparent;
+    box-shadow: 0 0 0 transparent;
+    border-radius: 0;
+    /*padding: 60px 0;*/
+    position: absolute;
+    width: 100%;
+    top:0;
+    left:0;
+    z-index: 0;    
+    margin: 0;
+    overflow: hidden;
+}
+.flexslider .slides img {
+    width: 100%;
+    height: auto;
+    display: block;
+    /*opacity: 0;*/
+    border:0 none;
+    outline: 0 none;
+    /*visibility: hidden;*/
+}
+.slides .slide{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 100%;
+    height: 540px;    
+}
+.slide_1{
+    background-image: url('../images/slide_1.jpg');
+}
+.slide_2{
+    background-image: url('../images/slide_2.jpg');
+}
+.slide_3{
+    background-image: url('../images/slide_3.jpg');
+}
+.flex-control-nav{
+    bottom:0;
+}
+/*end flexslider*/
+
+/*contact us*/
+.contactWrapp form > *{
+    width: 50%;
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+/*end*/ 
+.textBtn.connect{
+    cursor:pointer;
+}
