--- a/web/css/main.css
+++ b/web/css/main.css
@@ -575,13 +575,15 @@ header {
     background: #303030;
 } 
 .headerLogo img {
-    max-width: 100%;
-    max-height: 40px;
+    /*max-width: 100%;*/
+    height: 40px;
+    width: auto;
     display: block;
 }
 .headerLogo {
     float: left;
     max-width: 140px;
+    overflow: hidden;
 }
 .headerRight {
     float: right;
