--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1874,7 +1874,7 @@ footer h4 {
     margin: 0;
     overflow: hidden;
 }
-.flexslider .container{
+.flexslider + .container{
     min-height: 418px;
 }
 .flexslider .slides img {
