--- a/web/css/main.css
+++ b/web/css/main.css
@@ -624,7 +624,7 @@ header {
     float: left;
     position: relative;
     margin-top: 3px;
-    width: 220px;
+    width: 200px;
 }
 .headerSrch .advSrch {
     position: absolute;
@@ -718,7 +718,7 @@ header {
     float: left;
     line-height: 40px;
     margin-left: 10px;
-    max-width: 180px;
+    max-width: 125px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -1039,7 +1039,7 @@ header {
 .labelValue {
     position: relative;
     /*padding-left: 100px;*/
-    font-style: italic;
+    /*font-style: italic;*/
 }
 .labelValue label:after {
     content: ':'
