--- a/web/css/main.css
+++ b/web/css/main.css
@@ -69,9 +69,9 @@ html, body {
 }
 body {
     font-family: 'open-sans-initial', 'arial';
-    font-size: 14px;
+    font-size: 15px;
     min-width: 1100px;
-    color: #737373;
+    color: #000;
     background-color: #fff;
 }
 .wf-active body {
@@ -510,7 +510,8 @@ li.ui-tabs-active a {
     width: 65px;
     height: 65px;
     display: inline-block;
-    border: solid 2px #A0A0A0;
+    /*border: solid 2px #A0A0A0;*/
+    border: solid 2px #000;
     border-radius: 100%;
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
@@ -577,6 +578,7 @@ i {
 header {
     padding: 10px 0;
     background: #303030;
+    color: #fff;
 } 
 .headerLogo img {
     /*max-width: 100%;*/
@@ -1253,7 +1255,7 @@ header {
     width: 400px;
 }
 .popupLarge {
-    width: 820px;
+    width: 900px;
 }
 .popupTitle {
     padding: 13px 20px;
@@ -1464,7 +1466,7 @@ header {
     border-top: solid 1px #dbdbdb;
 }
 .srchPopupCont .customScroll {
-    max-height: 270px;
+    max-height: 430px;
 }
 /* end search page */
 
@@ -1694,6 +1696,7 @@ footer {
     padding: 40px 0;
     background: #303030;
     margin-top: -324px;
+    color: #fff;
 }
 footer h4 {
     margin-bottom: 10px;
@@ -1821,7 +1824,8 @@ footer h4 {
     /*color: #E2E2E2;*/
 }
 #advanced-search {
-    max-height: 440px;
+    max-height: 600px;
+    height: 600px;
 }
 
 /* contact and about us page */
