--- a/web/css/main.css
+++ b/web/css/main.css
@@ -579,6 +579,7 @@ header {
     padding: 10px 0;
     background: #303030;
     color: #fff;
+    font-size: 14px;
 } 
 .headerLogo img {
     /*max-width: 100%;*/
