--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1034,6 +1034,7 @@ header {
 .profileTabs ul li.active a {
     background-color: #FFFFFF;
     color: #737373;
+    color: #000;
 }
 .tabsContent {
     padding-left: 20px;
@@ -1131,7 +1132,8 @@ header {
 }
 .plAddress {
     font-size: 13px;
-    color: #ababab;
+    /*color: #ababab;*/
+    color: #000;
 }
 .plAddress i {
     font-size: 12px;
@@ -1753,7 +1755,8 @@ footer h4 {
 }
 .sideBarR .boxTitle {
     /*border-bottom: solid 1px #212121;*/
-    color: #ECECEC;
+    /*color: #ECECEC;*/
+    color: #fff;
     padding: 8px;
     margin-bottom: 0;
     background-color: #303030;
